# medipix

./: CMakeLists.txt  Doxyfile  Medipix.cpp  Medipix.h  MedipixCSM_8h.html  MedipixCSM_8h__dep__incl.map  MedipixCSM_8h__dep__incl.md5  MedipixCSM_8h__incl.map  MedipixCSM_8h__incl.md5  MedipixCSM_8h_source.html  MedipixSPM_8h.html  MedipixSPM_8h__dep__incl.map  MedipixSPM_8h__dep__incl.md5  MedipixSPM_8h__incl.map  MedipixSPM_8h__incl.md5  MedipixSPM_8h_source.html  Medipix_8h.html  Medipix_8h__dep__incl.map  Medipix_8h__dep__incl.md5  Medipix_8h__incl.map  Medipix_8h__incl.md5  Medipix_8h_source.html  README.md  README_8md.html  annotated.html  classMedipix-members.html  classMedipix.html  classMedipixCSM-members.html  classMedipixCSM.html  classMedipixCSM__coll__graph.map  classMedipixCSM__coll__graph.md5  classMedipixSPM-members.html  classMedipixSPM.html  classMedipixSPM__coll__graph.map  classMedipixSPM__inherit__graph.md5  classMedipix__inherit__graph.map  classMedipix__inherit__graph.md5  classes.html  dir_000000_000001.html  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.html  (+44 more)
.github/workflows/: codeql.yml  doxygen-gh-pages.yml  test.yml
example/: CMakeLists.txt  flux_images.cpp  frequency_pattern.cpp  pileup_scan.cpp  pixel_signal.cpp  threshold_scan.cpp
example/gnuplot/: plot_frequency_pattern.gp  plot_nps.gp  plot_pileup_scan.gp  plot_pixel_signal.gp  plot_threshold_scan.gp
include/: Medipix.h  MedipixCSM.h  MedipixSPM.h  helper.h
search/: all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js
src/: Medipix.cpp  MedipixCSM.cpp  MedipixSPM.cpp  helper.cpp
tests/: CMakeLists.txt  charge_sharing.cpp  pileup.cpp  test_utils.h
